Modified food_list in order_list and added order_detail

--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -21,7 +21,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a href="{% url 'foods' %}" class="nav-link">На главную</a>
+                <a href="{% url 'order' %}" class="nav-link">На главную</a>
             </li>
             {% block menu %}{% endblock %}
         </ul>
