--- a/source/webapp/templates/order_list.html
+++ b/source/webapp/templates/order_list.html
@@ -3,8 +3,12 @@
     <li class="nav-item">
         <a href="#" class="nav-link">Список пользователей</a>
     </li>
+    <li class="nav-item">
+        <a href="{% url 'food_create' %}" class="nav-link">Добавить блюдо</a>
+    </li>
 {% endblock %}
 {% block content %}
+    <h1><a href="{% url 'order_create' %}">Добавить заказ</a></h1>
     <h1>Список заказов</h1>
     {% for order in order_list %}
         <p><a href="{% url 'order_detail' order.pk %}">Адрес: {{ order.delivery_adress }}. Телефон: {{ order.contact_phone }}</a></p>
