--- a/source/webapp/templates/food_list.html
+++ b/source/webapp/templates/food_list.html
@@ -10,6 +10,6 @@
 {% block content %}
     <h1>Список блюд</h1>
     {% for food in food_list %}
-        <p>{{ food.pk }}.{{ food.name }} <a href="#">Изменить</a></p>
+        <p>{{ food.pk }}.{{ food.name }} <a href="{% url 'food_update' food.pk %}">Изменить</a></p>
     {% endfor %}
 {% endblock %}
