--- a/source/webapp/templates/order_list.html
+++ b/source/webapp/templates/order_list.html
@@ -14,6 +14,6 @@
     <h1><a href="{% url 'order_create' %}">Добавить заказ</a></h1>
     <h1>Список заказов</h1>
     {% for order in order_list %}
-        <p><a href="{% url 'order_detail' order.pk %}">Адрес: {{ order.delivery_adress }}. Телефон: {{ order.contact_phone }}</a></p>
+        <p><a href="{% url 'order_detail' order.pk %}">Адрес: {{ order.delivery_adress }}. Телефон: {{ order.contact_phone }}</a><a href="{% url 'order_update' order.pk %}"> Изменить</a></p>
     {% endfor %}
 {% endblock %}
