--- a/source/webapp/templates/food_detail.html
+++ b/source/webapp/templates/food_detail.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 {% block title %}Блюдо{% endblock %}
 {% block content %}
+    <p>Название: {{ food.name }}</p>
+    <p>Описание: {{ food.descrption }}</p>
+    <p>Цена: {{ food.price }}</p>
     <img src="{{ food.photo.url }}" alt="Картинка еды">
 {% endblock %}
