--- a/source/webapp/templates/food_list.html
+++ b/source/webapp/templates/food_list.html
@@ -10,6 +10,6 @@
 {% block content %}
     <h1>Список блюд</h1>
     {% for food in food_list %}
-        <p><a href="{% url 'food_detail' food.pk %}">{{ food.pk }}.{{ food.name }}</a> <a href="{% url 'food_update' food.pk %}">Изменить</a> <a href="{% url 'food_delete' food.pk %}">Удалить</a></p>
+        <p><a href="{% url 'food_detail' food.pk %}">{{ food.pk }}.{{ food.name }}</a> <a href="{% url 'food_update' food.pk %}">Изменить</a></p>
     {% endfor %}
 {% endblock %}
