--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -19,12 +19,16 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a href="{% url 'order' %}" class="nav-link">На главную</a>
-            </li>
-            {% block menu %}{% endblock %}
-        </ul>
+    <ul class="navbar-nav">
+    {% if user.is_authenticated %}
+        <li class="nav-item navbar-text">Привет, {{ user.username }}!</li>
+        <li class="nav-item"><a href="{% url 'webauth:logout' %}" class="nav-link">Выход</a></li>
+        <li class="nav-item"><a href="{% url 'webapp:order' %}" class="nav-link">На главную</a></li>
+        {% block menu %}{% endblock %}
+    {% else %}
+        <li class="nav-item"><a href="{% url 'webauth:login' %}" class="nav-link">Вход</a></li>
+    {% endif %}
+</ul>
     </div>
 </nav>
 <div class="container">
