--- a/source/webapp/templates/food_create.html
+++ b/source/webapp/templates/food_create.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block title %}Добавить блюдо{% endblock %}
 {% block content %}
-    <form action="{% url 'food_create' %}" method="post" enctype="multipart/form-data">
+    <form action="{% url 'webapp:food_create' %}" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="btn btn-primary">Сохранить</button>
