--- a/source/webapp/templates/food_list.html
+++ b/source/webapp/templates/food_list.html
@@ -4,12 +4,12 @@
         <a href="#" class="nav-link">Список пользователей</a>
     </li>
     <li class="nav-item">
-        <a href="{% url 'food_create' %}" class="nav-link">Добавить блюдо</a>
+        <a href="{% url 'webapp:food_create' %}" class="nav-link">Добавить блюдо</a>
     </li>
 {% endblock %}
 {% block content %}
     <h1>Список блюд</h1>
     {% for food in food_list %}
-        <p><a href="{% url 'food_detail' food.pk %}">{{ food.pk }}.{{ food.name }}</a> <a href="{% url 'food_update' food.pk %}">Изменить</a></p>
+        <p><a href="{% url 'webapp:food_detail' food.pk %}">{{ food.pk }}.{{ food.name }}</a> <a href="{% url 'webapp:food_update' food.pk %}">Изменить</a></p>
     {% endfor %}
 {% endblock %}
