Добавлены права доступа в модель Order. Добавлены ограничения в html файлах. Изменены представления для курьеров и отмены заказа.

--- a/source/webapp/templates/food_list.html
+++ b/source/webapp/templates/food_list.html
@@ -1,15 +1,17 @@
 {% extends 'base.html' %}
 {% block menu %}
-    <li class="nav-item">
-        <a href="#" class="nav-link">Список пользователей</a>
-    </li>
-    <li class="nav-item">
-        <a href="{% url 'webapp:food_create' %}" class="nav-link">Добавить блюдо</a>
-    </li>
+    {% if perms.webapp.edit_order_food %}
+        <li class="nav-item">
+            <a href="{% url 'webapp:food_create' %}" class="nav-link">Добавить блюдо</a>
+        </li>
+    {% endif %}
 {% endblock %}
 {% block content %}
     <h1>Список блюд</h1>
     {% for food in food_list %}
-        <p><a href="{% url 'webapp:food_detail' food.pk %}">{{ food.pk }}.{{ food.name }}</a> <a href="{% url 'webapp:food_update' food.pk %}">Изменить</a></p>
+        <p><a href="{% url 'webapp:food_detail' food.pk %}">{{ food.pk }}.{{ food.name }}</a></p>
+        {% if perms.webapp.edit_order_food %}
+            <p><a href="{% url 'webapp:food_update' food.pk %}">Изменить</a></p>
+        {% endif %}
     {% endfor %}
 {% endblock %}
