--- a/source/webapp/templates/order_list.html
+++ b/source/webapp/templates/order_list.html
@@ -1,8 +1,10 @@
 {% extends 'base.html' %}
 {% block menu %}
-    <li class="nav-item">
-        <a href="{% url 'webapp:food_create' %}" class="nav-link">Добавить блюдо</a>
-    </li>
+    {% if perms.webapp.edit_order_food %}
+        <li class="nav-item">
+            <a href="{% url 'webapp:food_create' %}" class="nav-link">Добавить блюдо</a>
+        </li>
+    {% endif %}
     <li class="nav-item">
         <a href="{% url 'webapp:food_list' %}" class="nav-link">Список блюд</a>
     </li>
@@ -10,7 +12,16 @@
 {% block content %}
     <h1>Список заказов</h1>
     {% for order in order_list %}
-        <p><a href="{% url 'webapp:order_detail' order.pk %}">Адрес: {{ order.delivery_adress }}. Телефон: {{ order.contact_phone }}</a><a href="{% url 'webapp:order_update' order.pk %}"> Изменить</a> <a href="{% url 'webapp:order_deliver' order.pk%}">{% if order.status == 'preparing' %}Взять заказ{% elif order.status == 'on_way' %}Доставить{% endif %}</a> <a href="{% url 'webapp:order_cancel' order.pk%}">Отменить</a></p>
+        <p><a href="{% url 'webapp:order_detail' order.pk %}">Адрес: {{ order.delivery_adress }}. Телефон: {{ order.contact_phone }}</a></p>
+        {% if perms.webapp.edit_order_food %}
+            <p><a href="{% url 'webapp:order_update' order.pk %}"> Изменить</a> <a href="{% url 'webapp:order_cancel' order.pk%}">Отменить</a></p>
+        {% endif %}
+        {% if perms.webapp.сan_take_order_or_deliver %}
+            <p><a href="{% url 'webapp:order_deliver' order.pk%}">{% if order.status == 'preparing' %}Взять заказ{% elif order.status == 'on_way' %}Доставить{% endif %}</a></p>
+        {% endif %}
+        <hr>
     {% endfor %}
-    <h4><a href="{% url 'webapp:order_create' %}">Добавить заказ</a></h4>
+    {% if perms.webapp.edit_order_food %}
+        <h4><a href="{% url 'webapp:order_create' %}">Добавить заказ</a>
+    {% endif %}
 {% endblock %}
