--- a/source/webapp/templates/food_delete.html
+++ b/source/webapp/templates/food_delete.html
@@ -2,8 +2,8 @@
 {% block title %}Удалить блюдо{% endblock %}
 {% block content %}
     <h1>Удаление блюда</h1>
-    <h5>Вы уверены, что хотите удалить блюдо {{ orderfoods.objects.pk }} из заказа {{ order }}?</h5>
-    <form action="{% url 'webapp:food_delete' order.pk %}" method="post">
+    <h5>Вы уверены, что хотите удалить блюдо {{ food.name }}?</h5>
+    <form action="{% url 'webapp:food_delete' food.pk %}" method="post">
         {% csrf_token %}
         <button type="submit" class="btn, btn-primary">Удалить</button>
     </form>
