--- a/source/webapp/templates/food_list.html
+++ b/source/webapp/templates/food_list.html
@@ -11,7 +11,7 @@
     {% for food in food_list %}
         <p><a href="{% url 'webapp:food_detail' food.pk %}">{{ food.pk }}.{{ food.name }}</a></p>
         {% if perms.webapp.edit_order_food %}
-            <p><a href="{% url 'webapp:food_update' food.pk %}">Изменить</a></p>
+            <p><a href="{% url 'webapp:food_update' food.pk %}">Изменить</a> <a href="{% url 'webapp:food_delete' food.pk %}">Удалить</a></p>
         {% endif %}
     {% endfor %}
 {% endblock %}
