--- a/source/webapp/templates/order_detail.html
+++ b/source/webapp/templates/order_detail.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %}
+{% load template_tag %}
+{% load staticfiles %}
 {% block menu %}
 
 {% endblock %}
 {% block content %}
     {% if perms.webapp.edit_order_food %}
-        <a href="{% url 'webapp:order_food_create' order.pk%}">Добавить блюдо в заказ</a>
+        <a href="{% url 'webapp:order_update' order.pk%}">Добавить блюдо в заказ</a>
     {% endif %}
     <p>Контактное имя: {{ order.contact_name }}</p>
     <p>Контактный телефон: {{ order.contact_phone }}</p>
@@ -13,7 +15,39 @@
     <p>Оператор: {{ order.operator }}</p>
     <p>Курьер: {{ order.courier }}</p>
     <h5>Блюдо: {{ order.foods.pk }}</h5>
-{% for food in order.foods.all %}
-    <p>{{ food.food.name }} - {{ food.amount }} шт.</p>
-{% endfor %}
+    <p>(<a class="create_link" href="{% url 'webapp:order_food_create' order.pk %}" id="order_food_add_link">Добавить</a>)</p>
+    <ul id="order_food_list">
+        {% for order_food in order.foods.all %}
+            <li id="order_food_{{ order_food.pk }}">
+                <span id="order_food_name_{{ order_food.pk }}" data-food_pk="{{ order_food.food.pk }}">{{ order_food.food.name }}</span>:
+                <span id="order_food_amount_{{ order_food.pk }}">{{ order_food.amount }}</span>шт.
+                (<a class="edit_link" href="{% url 'webapp:order_food_update' order_food.pk %}" data-pk="{{ order_food.pk }}">Изменить</a>/<a class="order_food_delete" href="{% url 'webapp:order_food_delete' order_food.pk%}" data-pk="{{ order_food.pk }}">Удалить</a>)
+            </li>
+        {% endfor %}
+    </ul>
+    <div class="modal" tabindex="-1" role="dialog" id="food_edit_modal">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Добавить блюда</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form id="food_form" action="{% url 'webapp:order_food_create' order.pk %}" method="POST">
+                        <div class="text-danger" id="food_form_errors"></div>
+                        {% csrf_token %}
+                        {{ form.as_p }}
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" id="food_submit">Добавить</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
+                </div>
+            </div>
+        </div>
+{% endblock %}
+{% block scripts %}
+    <script type="application/javascript" src="{% static 'js/main.js' %}"></script>
 {% endblock %}
