--- a/source/webapp/templates/order_list.html
+++ b/source/webapp/templates/order_list.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load template_tag %}
 {% block menu %}
     {% if perms.webapp.edit_order_food %}
         <li class="nav-item">
